# KenkoMQTT

./: .gitignore  README.md  Taskfile.yml  go.mod  go.sum  index.html  main.go  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: launch.json
.github/workflows/: build.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/bindings/github.com/wailsapp/wails/v3/internal/: eventdata.d.ts
frontend/bindings/kenkomqtt/internal/models/: index.ts  models.ts
frontend/bindings/kenkomqtt/internal/services/: appservice.ts  brokerservice.ts  clientservice.ts  connectionservice.ts  index.ts  models.ts  settingsservice.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/ui/: textarea.tsx
frontend/src/lib/: events.ts  theme.ts
frontend/src/pages/: BrokerPage.tsx  ClientPage.tsx
internal/assets/: assets.go
internal/config/: config.go
internal/database/: database.go
internal/logger/: logger.go
internal/models/: models.go
internal/platform/: platform.go  platform_darwin.go  platform_linux.go  platform_windows.go
internal/services/: app_service.go  broker_hook.go  broker_service.go  client_service.go  connection_service.go  connection_service_test.go  mqtt_integration_test.go  settings_service.go  window_state_service.go
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: roundtrip.rs  tls_roundtrip.rs
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  broker.rs  codec.rs  lib.rs  main.rs  model.rs  mqtt.rs  profiles_io.rs  store.rs  tls.rs
src/components/: Analysis.tsx  ConnectionTree.tsx  Gauge.tsx  JsonView.tsx  LineChart.tsx  MessageViewer.tsx  MultiLineChart.tsx  PublishPanel.tsx  SubscriptionPanel.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  sonner.tsx  tooltip.tsx
src/lib/: api.ts  diff.ts  i18n.tsx  log.ts  theme.ts  utils.ts
src/pages/: BrokerPage.tsx  ClientPage.tsx  DashboardPage.tsx  LogPage.tsx  SettingsPage.tsx
tauri-poc/: package.json  pnpm-lock.yaml  vite.config.ts
tauri-poc/src/: App.tsx  styles.css
tauri-poc/src-tauri/: Cargo.toml  tauri.conf.json
tauri-poc/src-tauri/examples/: roundtrip.rs  ws_roundtrip.rs
tauri-poc/src-tauri/src/: lib.rs  main.rs  mqtt.rs  store.rs
tauri-poc/src/components/ui/: badge.tsx  tabs.tsx
tauri-poc/src/pages/: ClientPage.tsx
