[package]
name = "kenkomqtt"
version = "0.1.0"
description = "KenkoMQTT — 本地 MQTT 调试工具（客户端 + 内嵌 broker，跨平台）"
edition = "2021"

[lib]
# staticlib/cdylib are required for the mobile (Android/iOS) targets.
name = "kenkomqtt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# use-rustls: tls:// 与 wss:// ；websocket: ws:// / wss://。v5 模块随 crate 提供。
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls", "websocket"] }
# 用于 tls 的 rustls 配置（skip-verify / CA / 系统根）；版本须与 rumqttc 的 rustls 一致（0.22）。
rustls = "0.22"
rustls-pemfile = "2"
webpki-roots = "0.26"
# 内嵌 broker 的 mqtts / ws / wss 监听：服务端 TLS 与 WebSocket 适配（纯 Rust，跨平台）。
tokio-rustls = "0.25"
async-tungstenite = { version = "0.25", features = ["tokio-runtime"] }
ws_stream_tungstenite = "0.13"
tokio-util = { version = "0.7", features = ["compat"] }
tokio = { version = "1.52.3", features = ["net", "io-util", "sync", "time", "rt", "macros"] }
bytes = "1.12.1"
base64 = "0.22.1"
hex = "0.4.3"
rmp-serde = "1.3.1"
ciborium = "0.2.2"
fastrand = "2.4.1"
serde_json_path = "0.7.2"
regex = "1"
# 连接档案导入/导出：YAML / XML / Excel（均为纯 Rust，保证 Android/iOS 交叉编译）。
serde_yaml_ng = "0.10"
quick-xml = { version = "0.37", features = ["serialize"] }
rust_xlsxwriter = "0.79"
calamine = "0.26"

[dev-dependencies]
# broker 集成测试：自签证书用于 mqtts/wss 往返测试。
rcgen = "0.13"

[features]
# used by `tauri dev`/`tauri build` to skip the updater etc.
default = []

# Android 专用：通过 JNI 查询/跳转 电池优化与后台运行权限设置。
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
