[package]
name = "kenkomqtt-poc"
version = "0.1.0"
description = "KenkoMQTT Tauri Android PoC"
edition = "2021"

[lib]
# staticlib/cdylib are required for the mobile (Android/iOS) targets.
name = "kenkomqtt_poc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# use-rustls: tls:// 与 wss:// ；websocket: ws:// / wss://。v5 模块随 crate 提供。
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls", "websocket"] }
# 用于 tls 的 rustls 配置（skip-verify / CA / 系统根）；版本须与 rumqttc 的 rustls 一致（0.22）。
rustls = "0.22"
rustls-pemfile = "2"
webpki-roots = "0.26"

[features]
# used by `tauri dev`/`tauri build` to skip the updater etc.
default = []
